--- a/test.html
+++ b/test.html
@@ -9,7 +9,10 @@
                 <form action="">
                     <h4>Список студентів:</h4>
                     <ol>
-                        <li class="m-1" ng-repeat="students in students.students"><span>{{students.student}}</span> : knowledge is - <span>{{students.knowledge}}</span><button type="button" class="btn btn-danger ml-2" ng-click="students.removeItem(item)">Delete</button></li>
+                        <li class="m-1" ng-repeat="students in students.students track by $index"><span>{{students.student}}</span> :
+                            knowledge is - <span>{{students.knowledge}}</span>
+                            <button type="button" class="btn btn-danger ml-2" ng-click="students.removeItem(student)">Delete</button>
+                        </li>
                     </ol>
                 </form>
             </div>
@@ -18,7 +21,8 @@
                 <form action="">
                     <h4>Список студентів на інтернатурі:</h4>
                     <ol>
-                        <li class="m-1" ng-repeat="students in students.students | filter : 'Upper' : true"><span>{{students.student}}</span> : knowledge is - <span>{{students.knowledge}}</span></li>
+                        <li class="m-1" ng-repeat="students in students.students | filter : 'Upper' : true"><span>{{students.student}}</span>
+                            : knowledge is - <span>{{students.knowledge}}</span></li>
                     </ol>
                 </form>
             </div>
